# ProposalNosoCPP

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  build.sh  config.ini  nosod.cpp
